# GUI-Creator

./: CMakeLists.txt  README  gui-creator.sh
cmake/: FindFTGL.cmake
examples/hello_world/: hello_world.lua
examples/hello_world/l10n/: main_screen.lua
examples/hello_world/scenes/: main_screen.lua
files/: build.txt  ftgl.patch
include/: base_layer.h  editor_window.h  font.h  font_browser.h  font_manager.h  game_object.h  history_window.h  label.h  layer.h  layer_group.h  layers_tree_widget.h  layers_window.h  location.h  lua_script.h  main_window.h  options.h  options_dialog.h  pch.h  project.h  property_window.h  scene.h  singleton.h  sprite.h  sprite_browser.h  texture.h  texture_loader.h  texture_manager.h  thumbnail_loader.h  utils.h
res/: resources.qrc
src/: base_layer.cpp  editor_window.cpp  font.cpp  font_browser.cpp  font_manager.cpp  game_object.cpp  history_window.cpp  label.cpp  layer.cpp  layer_group.cpp  layers_tree_widget.cpp  layers_window.cpp  location.cpp  lua_script.cpp  main.cpp  main_window.cpp  options.cpp  options_dialog.cpp  project.cpp  property_window.cpp  scene.cpp  sprite.cpp  sprite_browser.cpp  texture.cpp  texture_manager.cpp  thumbnail_loader.cpp  utils.cpp
ui/: font_browser.ui  history_window.ui  layers_window.ui  main_window.ui  options_dialog.ui  property_window.ui  sprite_browser.ui
